\newcommand{\CRANpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}

\name{NEWS}
\title{ pqR News}
\encoding{UTF-8}


\section{CHANGES IN VERSION RELEASED 2017-00-00}{

  \subsection{INTRODUCTION}{
  \itemize{ 
  \item This release has several performance improvements.
  }}

  \subsection{DOCUMENTATION AND FEATURE CHANGES}{
  \itemize{
  \item Attempts to set attributes on a symbol are now silently ignored,
        both at the R level, with \code{attr} and \code{attributes}, and
        at the C API level, with \code{SET_ATTRIB}.  Getting the attributes
        of a symbol returns NULL.  Previously (and also in R-3.4.0),
        attributes could be attached to symbols, but they were lost
        when a workspace was saved and restored.
  \item There is no longer a \code{SET_PRINTNAME} function available in
        the C API.  Setting the print name of a symbol has never been
        a safe or reasonable thing to do.
  \item The default \code{size} for \code{new.env} is now \code{NA}, which
        gives an internal default, which now varies depending on the
        platform and configuration options.
  }}

  \subsection{PERFORMANCE IMPROVEMENTS}{
  \itemize{
  \item Relational operators are now faster, and may sometimes be done in 
        helper threads (though currently without pipelining of data).
        Computations such as \code{sum(vec>0)} are now done with a
        merged procedure that avoids creating \code{vec>0} as an intermediate
        value.
  \item New versions of the C matrix multiply functions are now used,
        which may be faster due to use of the C "restrict" keyword to
        allow better optimization.
  }}

  \subsection{BUG FIXES}{
  \itemize{
  \item Fixed a bug illustrated by the following:
\preformatted{    a <- as.integer(NA); e <- new.env(size=a); print(a)
}
        The value printed was previously 0 rather than NA.
        This bug also exists in R Core versions to at least R-3.4.0.
  }}
}

